# bonding

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README  README-zh.md  README.md  bonding.opam  build.ninja  compile_commands.json  dune-project  makefile  xmake.lua
.github/: logo.xcf
.github/workflows/: build.yaml
example/: bonding.json  config.toml  makefile
example/mount_dir/: test.c
lib/: child.ml  cli.ml  clone.c  config.ml  container.ml  dune  err.ml  log.ml  utils.ml
lib/structopt/samples/: compound_arguments.cpp  demo.cpp  double_dash_argument.cpp  enum_class_argument.cpp  flag_arguments.cpp  float_literals.cpp  integer_literals.cpp  nested_structures.cpp  nested_structures_2.cpp  option_delimiters.cpp  optional_arguments.cpp  pair_argument.cpp  positional_and_compound_arguments.cpp  positional_and_optional_arguments.cpp  positional_arguments.cpp  (+4 more)
src/: capabilities.cpp  child.cpp  child.rs  cli.c  cli.cpp  cli.rs  config.cpp  config.rs  configfile.cpp  container.cpp  container.rs  env.rs  environment.cpp  error.cpp  error.rs  exec.cpp  hostname.cpp  hostname.rs  ipc.cpp  log.c  main.c  main.cpp  main.rs  mount.cpp  mount.rs  namespace.cpp  process.rs  resource.cpp  resource.rs  syscall.cpp  syscall.rs  unix.cpp
src/include/: bonding.hpp  capabilities.h  child.h  cli.h  config.h  configfile.h  container.h  environment.h  error.h  exec.h  hostname.h  ipc.h  log.h  log.hpp  mount.h  namespace.h  resource.h  result.hpp  syscall.h  unix.h
src/logging/: formatter.cpp  logging.cpp  xmake.lua
test/: dune
(+44 files in other folders)
