[package]
name = "bonding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
nix = '0.26.2'
log = "0.4.17"
scan_fmt = "0.2.6"
colog = {git = "https://github.com/muqiuhan/rust-colog"}
syscallz = "0.16.1"
libc = "0.2.142"
cgroups-rs = "0.2.6"
rlimit = "0.6.2"